winstorecompat: Implement GetActiveProcessorCount
Handle the one case of ALL_PROCESSOR_GROUPS using GetSystemInfo;
this can't return more than 64 cores, but that's probably good
enough for a stub implementation.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-libraries/winstorecompat/Makefile.am
+++ b/mingw-w64-libraries/winstorecompat/Makefile.am
@@ -13,6 +13,7 @@ libwinstorecompat_a_SOURCES = \
   src/Crypto.c \
   src/EnumProcessModules.c \
   src/GetACP.c \
+  src/GetActiveProcessorCount.c \
   src/GetConsoleOutputCP.c \
   src/GetFileAttributes.c \
   src/GetFileInformationByHandle.c \
@@ -52,6 +53,7 @@ libwinstorecompat_a_SOURCES = \
 libwindowsappcompat_a_SOURCES = \
   src/CreateFileW.c \
   src/EnumProcessModules.c \
+  src/GetActiveProcessorCount.c \
   src/GetFileSize.c \
   src/GetStartupInfo.c \
   src/GetUserName.c \
