--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -339,11 +339,25 @@ jobs:
       - name: Download dependencies
         run: |
           sudo apt-get update && sudo apt-get install libgmp-dev libmpfr-dev libmpc-dev autoconf automake
+      - name: Cache tarballs
+        id: cache-gnu
+        uses: actions/cache@v4
+        with:
+          path: /opt/gnu
+          key: binutils-2.42-gcc-14.1.0
+      - name: Download tarballs
+        if: steps.cache-gnu.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p /opt/gnu
+          cd /opt/gnu
+          curl -LO https://ftpmirror.gnu.org/gnu/gmp/gmp-6.3.0.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/mpfr/mpfr-4.2.1.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/mpc/mpc-1.3.1.tar.gz
+          curl -LO https://ftpmirror.gnu.org/gnu/binutils/binutils-2.42.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/gcc/gcc-14.1.0/gcc-14.1.0.tar.xz
       - name: Build binutils
         run: |
-          curl -LO https://ftpmirror.gnu.org/gnu/binutils/binutils-2.42.tar.xz
-          tar -Jxf binutils-*.tar.xz
-          rm binutils-*.tar.xz
+          tar -Jxf /opt/gnu/binutils-*.tar.xz
           cd binutils-*
           mkdir build
           cd build
@@ -353,9 +367,7 @@ jobs:
           echo $(pwd)/../../prefix/bin >> $GITHUB_PATH
       - name: Build the base GCC
         run: |
-          curl -LO https://ftpmirror.gnu.org/gnu/gcc/gcc-14.1.0/gcc-14.1.0.tar.xz
-          tar -Jxf gcc-*.tar.xz
-          rm gcc-*.tar.xz
+          tar -Jxf /opt/gnu/gcc-*.tar.xz
           cd gcc-*
           mkdir build
           cd build
@@ -429,13 +441,27 @@ jobs:
           rm gcc-mingw-*.tar.xz
           sudo mv gcc-mingw* /opt/gcc-mingw
           echo /opt/gcc-mingw/bin >> $GITHUB_PATH
+      - name: Cache tarballs
+        id: cache-gnu
+        uses: actions/cache@v4
+        with:
+          path: /opt/gnu
+          key: binutils-2.42-gcc-14.1.0
+      - name: Download tarballs
+        if: steps.cache-gnu.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p /opt/gnu
+          cd /opt/gnu
+          curl -LO https://ftpmirror.gnu.org/gnu/gmp/gmp-6.3.0.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/mpfr/mpfr-4.2.1.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/mpc/mpc-1.3.1.tar.gz
+          curl -LO https://ftpmirror.gnu.org/gnu/binutils/binutils-2.42.tar.xz
+          curl -LO https://ftpmirror.gnu.org/gnu/gcc/gcc-14.1.0/gcc-14.1.0.tar.xz
       - name: Build dependencies
         run: |
           PREFIX=$(pwd)/prefix
 
-          curl -LO https://ftpmirror.gnu.org/gnu/gmp/gmp-6.3.0.tar.xz
-          tar -Jxf gmp-*.tar.xz
-          rm gmp-*.tar.xz
+          tar -Jxf /opt/gnu/gmp-*.tar.xz
           cd gmp-*
           mkdir build
           cd build
@@ -444,9 +470,7 @@ jobs:
           make install
           cd ../..
 
-          curl -LO https://ftpmirror.gnu.org/gnu/mpfr/mpfr-4.2.1.tar.xz
-          tar -Jxf mpfr-*.tar.xz
-          rm mpfr-*.tar.xz
+          tar -Jxf /opt/gnu/mpfr-*.tar.xz
           cd mpfr-*
           mkdir build
           cd build
@@ -455,9 +479,7 @@ jobs:
           make install
           cd ../..
 
-          curl -LO https://ftpmirror.gnu.org/gnu/mpc/mpc-1.3.1.tar.gz
-          tar -zxf mpc-*.tar.gz
-          rm mpc-*.tar.gz
+          tar -zxf /opt/gnu/mpc-*.tar.gz
           cd mpc-*
           mkdir build
           cd build
@@ -468,9 +490,7 @@ jobs:
 
       - name: Build binutils
         run: |
-          curl -LO https://ftpmirror.gnu.org/gnu/binutils/binutils-2.42.tar.xz
-          tar -Jxf binutils-*.tar.xz
-          rm binutils-*.tar.xz
+          tar -Jxf /opt/gnu/binutils-*.tar.xz
           cd binutils-*
           mkdir build
           cd build
@@ -480,9 +500,7 @@ jobs:
           echo $(pwd)/../../prefix/bin >> $GITHUB_PATH
       - name: Build GCC
         run: |
-          curl -LO https://ftpmirror.gnu.org/gnu/gcc/gcc-14.1.0/gcc-14.1.0.tar.xz
-          tar -Jxf gcc-*.tar.xz
-          rm gcc-*.tar.xz
+          tar -Jxf /opt/gnu/gcc-*.tar.xz
           cd gcc-*
           mkdir build
           cd build
